samples/_failures_safe/1761794392_ae7d9b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f6935774.c: In function ‘run_state_machine’:
./samples/SAFE/__tmp_f6935774.c:154:13: error: expected declaration or statement at end of input
  154 |             case STATE_ERROR:
      |             ^~~~
./samples/SAFE/__tmp_f6935774.c:154:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f6935774.c:154:13: error: expected declaration or statement at end of input
